# HomeLlamaHub-

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  deps.py  ollama.py  tokens.py
backend/app/api/admin/: audit.py  hosts.py  settings.py  stats.py  users.py
backend/app/core/: audit.py  queue.py  security.py
backend/app/models/: __init__.py  audit.py  host.py  job.py  setting.py  token.py  user.py
backend/app/schemas/: __init__.py  auth.py  host.py  job.py  token.py  user.py
backend/app/services/: host_router.py  ollama.py  wol.py
backend/tests/: conftest.py  test_auth.py  test_queue.py  test_tokens.py
docs/: 04-seguridad.md  05-incidentes.md  06-runbook.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  PrivateRoute.tsx
frontend/src/lib/: api.ts  (+1 more)
observability/: docker-compose.yml  loki-config.yml  promtail-config.yml
observability/dashboards/: security.json  traffic.json
scripts/: ai.backup.plist  backup.sh  bootstrap.sh  check-dyndns.sh
services/firewall/: load-whitelist.sh  pf.conf  whitelist.yml
services/security/: ai.auditor.plist  auditor.py
services/wol/: ai.wol-proxy.plist  test-magic-packet.sh  wol-proxy.py
services/worker-template/: Caddyfile.template  README.md  ai.ollama.worker.plist  setup-mtls.sh  setup-worker.sh
tests/security/: api-pentest.sh  audit-verify.sh  nmap.sh  prompt-injection.sh  run-all.sh  testssl.sh  zap-baseline.sh
(+20 files in other folders)
